force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description
  >見積のヘッダ情報を保持する。明細は見積明細(QuoteLineItem__c)に主従関係で紐づく。</description>
    <label>見積</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>見積番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>見積</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>