force-app/main/default/objects/Quote__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description
  >見積書に印字する宛名。未入力の場合は取引先名を使用する。</description>
    <inlineHelpText>空欄の場合は取引先名が印字されます。</inlineHelpText>
    <label>宛名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>