force-app/main/default/objects/Quote__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>「別途協議」等の文言も入るためテキスト型とする。</description>
    <label>納期</label>
    <length>100</length>
    <type>Text</type>
</CustomField>