force-app/main/default/objects/Quote__c/fields/DeliveryPlace__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPlace__c</fullName>
    <label>納入場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>