force-app/main/default/objects/Quote__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>見積有効期限</label>
    <type>Date</type>
</CustomField>