force-app/main/default/objects/Quote__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>備考</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>