force-app/main/default/objects/Quote__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>支払条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>