force-app/main/default/objects/Quote__c/fields/QuoteDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>見積日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>