force-app/main/default/objects/Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>作成中</fullName>
                <default>true</default>
                <label>作成中</label>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
            <value>
                <fullName>送付済</fullName>
            </value>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>