force-app/main/default/objects/Quote__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>小計(税抜)</label>
    <summarizedField>QuoteLineItem__c.Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>