force-app/main/default/objects/Quote__c/fields/TaxableBase10__c.field-meta.xml
<CustomField>
    <fullName>TaxableBase10__c</fullName>
    <description
  >消費税10%の課税対象額。インボイス制度に合わせ税率ごとに集計する。</description>
    <label>10%対象額</label>
    <summarizedField>QuoteLineItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem__c.TaxRate__c</field>
        <operation>equals</operation>
        <value>10%</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>