force-app/main/default/objects/Quote__c/fields/TaxableBase8__c.field-meta.xml
<CustomField>
    <fullName>TaxableBase8__c</fullName>
    <description
  >消費税8%の課税対象額。インボイス制度に合わせ税率ごとに集計する。</description>
    <label>8%対象額</label>
    <summarizedField>QuoteLineItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem__c.TaxRate__c</field>
        <operation>equals</operation>
        <value>8%</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>