force-app/main/default/objects/Quote__c/fields/TaxAmount10__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount10__c</fullName>
    <description>税率ごとに1回だけ端数処理する（インボイス制度）。</description>
    <formula>FLOOR(TaxableBase10__c * 0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税(10%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>