force-app/main/default/objects/Quote__c/fields/TaxAmount8__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount8__c</fullName>
    <description>税率ごとに1回だけ端数処理する（インボイス制度）。</description>
    <formula>FLOOR(TaxableBase8__c * 0.08)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税(8%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>