force-app/main/default/objects/Quote__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <formula>Subtotal__c + TaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計金額(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>