force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Subject__c</columns>
    <columns>QuoteDate__c</columns>
    <columns>Status__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>